--- a/admin-site/src/index.css
+++ b/admin-site/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.trigger {
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.header__style {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__options {
+  margin-right: 20px;
+  color: #1890ff;
+}
+
+.mr-5 {
+  margin-right: 10px !important;
+}
+
+.scroll {
+  overflow: scroll;
+}
